<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <EditText android:id="@+id/departure_location"
        android:layout_weight="5"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:hint="@string/departure_location" />
    <EditText android:id="@+id/departure_date"
        android:layout_weight="5"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:hint="@string/departure_date" />
    <EditText android:id="@+id/departure_time"
        android:layout_weight="5"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:hint="@string/departure_time" />
    <EditText android:id="@+id/arrival_location"
        android:layout_weight="5"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:hint="@string/arrival_location" />
    <EditText android:id="@+id/arrival_date"
        android:layout_weight="5"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:hint="@string/arrival_date" />
    <EditText android:id="@+id/arrival_time"
        android:layout_weight="5"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:hint="@string/arrival_time" />
    <TextView android:id="@+id/progress"
        android:layout_weight="3"
        android:textSize= "20dp"
        android:layout_width="match_parent"
        android:layout_height="0dp"/>
    <Button
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_generate"
        android:onClick="GenerateRoute" />
    <Button
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_reset"
        android:onClick="Reset" />
</LinearLayout>